hard-gists/702a848ba0a7a64b139985f5cad885f0/run.log
=== Docker Run Log for 702a848ba0a7a64b139985f5cad885f0 ===
Started at: Mi 29. Okt 16:58:16 CET 2025

[2025-10-29 16:58:17] START: Running container for 702a848ba0a7a64b139985f5cad885f0
[2025-10-29 16:58:17] SUCCESS: Container bfbb7e9a43b0066a5d26ab7b9cbd5deead116f59efac459cfd02c3ecc8dea69d started for 702a848ba0a7a64b139985f5cad885f0
=== Container logs for 702a848ba0a7a64b139985f5cad885f0 ===
  File "/snippet.py", line 55
    print"slack command enabled."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 702a848ba0a7a64b139985f5cad885f0 ===
[2025-10-29 16:58:19] INFO: Container bfbb7e9a43b0066a5d26ab7b9cbd5deead116f59efac459cfd02c3ecc8dea69d has stopped
